--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Contacts"
         tools:targetApi="31">
+        <activity
+            android:name=".Detail_contact"
+            android:exported="false" />
         <activity
             android:name=".Ajouter_contact"
             android:exported="false" />
